[package]
name = "firebae-cm"
version = "0.2.0"
edition = "2021"

description = "A Firebase Cloud Messaging Http V1 implementation"
license = "MIT"
homepage = "https://github.com/famedly/firebae-cm"
repository = "https://github.com/famedly/firebae-cm"

[dependencies]
serde =             { version = "1.0.228", features = ["derive"] }
serde_json =        { version = "1.0.145" }
reqwest =           { version = "0.12.24", features = ["json", "rustls-tls"], default-features=false }
time =              { version = "0.3.44", features = ["formatting"] }
log =               { version = "0.4.28" }
thiserror =         { version = "2.0.17" }
